fix word-wrap problem

--- a/jupyter_alabaster_theme/jupyter/static/css/jupytertheme.css
+++ b/jupyter_alabaster_theme/jupyter/static/css/jupytertheme.css
@@ -418,6 +418,8 @@ p.caption {
     font-size: 20px;
     margin: 12px 0px;
     float: left;
+    text-align: left;
+    white-space: normal;
 }
 
 .mobile-nav-items {
